OpenLDAP 2.2 Change Log

OpenLDAP 2.2.16 Release
	Fixed libldap getaddrinfo hints portability bug (ITS#3279)
	Fixed libldap find_connection bug (ITS#3280)
	Fixed libldap SASL host connected to bug (ITS#3298)
	Fixed libldap SASL proper sockbuf bug
	Fixed libldap results lc bug (ITS#3250)
	Fixed ldapsearch paged results size 0 bug 
	Fixed slapd syncrepl SSF propagation bug (ITS#3131)
	Fixed slapd ACL sets bug (ITS#3140)
	Fixed slapd bind referral bug (ITS#3264)
	Fixed slapd syncrepl misc bugs (ITS#3259,3297)
	Fixed slapd overlays CSN CTX bug (ITS#3288)
	Fixed slapd sun_path portability bug
	Fixed slapd permissive modify bug
	Fixed slapd hang bug (ITS#3309)
	Fixed slapcommon shutdown bug (ITS#3326)
	Fixed back-bdb CSN CTX bug (ITS#3301)
	Fixed back-bdb id2entry bug
	Fixed back-bdb syncrepl psearch delete bug (ITS#3309)
	Fixed back-ldap/meta known controls bugs (ITS#3291)
	Fixed back-monitor syncrepl bug (ITS#3265)
	Fixed slurpd replog error message bug (ITS#3275)
	Added slapd syncrepl exattrs (ITS#3289)
	Updated slapd SLAPI
	Updated LDAP C++ library
	Documentation
		Updated provided RFCs and I-Ds
		Updated ldap_url(3) (ITS#3310)

OpenLDAP 2.2.15 Release
	Fixed back-bdb DB_DEADLOCK memory leak bug (ITS#3213)
	Fixed back-bdb dbcache locking bug (ITS#3201)
	Fixed back-bdb ctxcsn locking bug
	Fixed back-bdb modify index corruption (ITS#3226)
	Fixed back-bdb leaking locks in tools (ITS#3245)
	Fixed back-bdb leaking locks in overlays (ITS#3255)
	Fixed back-hdb dn2id bug with unsigned chars
	Fixed back-ldap shared connections failover (ITS#3217)
	Fixed back-ldap validate/pretty values (ITS#3218)
	Fixed back-monitor/backglue clash in tool mode (ITS#3254)
	Fixed slapi slapi_int_compute_output_ber attrs bug
	Fixed slapd uniqueMember/nameUID bugs (ITS#3210)
	Fixed slapd uniqueMemberMatch empty DN portion bug (ITS#3247)
	Fixed slapd oidValidate 0 bug (ITS#3211)
	Fixed slapd operational attribute log message bug (ITS#3205)
	Fixed slapd pagedResults invalid cookie bug (ITS#3089)