@@ -1,205 +1,0 @@
-# Microsoft Developer Studio Project File - Name="backsql" - Package Owner=<4>
-# Microsoft Developer Studio Generated Build File, Format Version 5.00
-# ** DO NOT EDIT **
-
-# TARGTYPE "Win32 (x86) Static Library" 0x0104
-
-CFG=backsql - Win32 Single Debug
-!MESSAGE This is not a valid makefile. To build this project using NMAKE,
-!MESSAGE use the Export Makefile command and run
-!MESSAGE 
-!MESSAGE NMAKE /f "backsql.mak".
-!MESSAGE 
-!MESSAGE You can specify a configuration when running NMAKE
-!MESSAGE by defining the macro CFG on the command line. For example:
-!MESSAGE 
-!MESSAGE NMAKE /f "backsql.mak" CFG="backsql - Win32 Single Debug"
-!MESSAGE 
-!MESSAGE Possible choices for configuration are:
-!MESSAGE 
-!MESSAGE "backsql - Win32 Release" (based on "Win32 (x86) Static Library")
-!MESSAGE "backsql - Win32 Debug" (based on "Win32 (x86) Static Library")
-!MESSAGE "backsql - Win32 Single Debug" (based on "Win32 (x86) Static Library")
-!MESSAGE "backsql - Win32 Single Release" (based on\
- "Win32 (x86) Static Library")
-!MESSAGE 
-
-# Begin Project
-# PROP Scc_ProjName ""
-# PROP Scc_LocalPath ""
-CPP=cl.exe
-
-!IF  "$(CFG)" == "backsql - Win32 Release"
-
-# PROP BASE Use_MFC 0
-# PROP BASE Use_Debug_Libraries 0
-# PROP BASE Output_Dir "Release"
-# PROP BASE Intermediate_Dir "Release"
-# PROP BASE Target_Dir ""
-# PROP Use_MFC 0
-# PROP Use_Debug_Libraries 0
-# PROP Output_Dir "..\..\..\Release"
-# PROP Intermediate_Dir "..\..\..\Release\backsql"
-# PROP Target_Dir ""
-RSC=rc.exe
-# ADD BASE RSC /l 0x419
-# ADD RSC /l 0x419
-# ADD BASE CPP /nologo /W3 /GX /O2 /D "WIN32" /D "NDEBUG" /D "_WINDOWS" /YX /FD /c
-# ADD CPP /nologo /MT /W3 /GX /O2 /I "..\\" /I "..\..\..\include" /D "WIN32" /D "NDEBUG" /D "_WINDOWS" /YX /FD /c
-BSC32=bscmake.exe
-# ADD BASE BSC32 /nologo
-# ADD BSC32 /nologo
-LIB32=link.exe -lib
-# ADD BASE LIB32 /nologo
-# ADD LIB32 /nologo
-
-!ELSEIF  "$(CFG)" == "backsql - Win32 Debug"
-
-# PROP BASE Use_MFC 0
-# PROP BASE Use_Debug_Libraries 1
-# PROP BASE Output_Dir "Debug"
-# PROP BASE Intermediate_Dir "Debug"
-# PROP BASE Target_Dir ""
-# PROP Use_MFC 0
-# PROP Use_Debug_Libraries 1
-# PROP Output_Dir "..\..\..\Debug"
-# PROP Intermediate_Dir "..\..\..\Debug\backsql"
-# PROP Target_Dir ""
-RSC=rc.exe
-# ADD BASE RSC /l 0x419
-# ADD RSC /l 0x419
-# ADD BASE CPP /nologo /W3 /GX /Z7 /Od /D "WIN32" /D "_DEBUG" /D "_WINDOWS" /YX /FD /c
-# ADD CPP /nologo /MTd /W3 /GX /Z7 /Od /I "..\\" /I "..\..\..\include" /D "WIN32" /D "_DEBUG" /D "_WINDOWS" /FR /YX /FD /c
-BSC32=bscmake.exe
-# ADD BASE BSC32 /nologo
-# ADD BSC32 /nologo
-LIB32=link.exe -lib
-# ADD BASE LIB32 /nologo
-# ADD LIB32 /nologo
-
-!ELSEIF  "$(CFG)" == "backsql - Win32 Single Debug"
-
-# PROP BASE Use_MFC 0
-# PROP BASE Use_Debug_Libraries 1
-# PROP BASE Output_Dir "backsql"
-# PROP BASE Intermediate_Dir "backsql"
-# PROP BASE Target_Dir ""
-# PROP Use_MFC 0
-# PROP Use_Debug_Libraries 1
-# PROP Output_Dir "..\..\..\SDebug"
-# PROP Intermediate_Dir "..\..\..\SDebug\backsql"
-# PROP Target_Dir ""
-RSC=rc.exe
-# ADD BASE RSC /l 0x419
-# ADD RSC /l 0x419
-# ADD BASE CPP /nologo /MTd /W3 /GX /Z7 /Od /I "..\\" /I "..\..\..\include" /D "WIN32" /D "_DEBUG" /D "_WINDOWS" /FR /YX /FD /c
-# ADD CPP /nologo /W3 /GX /Z7 /Od /I "..\\" /I "..\..\..\include" /D "WIN32" /D "_DEBUG" /D "_WINDOWS" /FR /YX /FD /c
-BSC32=bscmake.exe
-# ADD BASE BSC32 /nologo
-# ADD BSC32 /nologo
-LIB32=link.exe -lib
-# ADD BASE LIB32 /nologo
-# ADD LIB32 /nologo
-
-!ELSEIF  "$(CFG)" == "backsql - Win32 Single Release"
-
-# PROP BASE Use_MFC 0
-# PROP BASE Use_Debug_Libraries 0
-# PROP BASE Output_Dir "backldb0"
-# PROP BASE Intermediate_Dir "backldb0"
-# PROP BASE Target_Dir ""
-# PROP Use_MFC 0
-# PROP Use_Debug_Libraries 0
-# PROP Output_Dir "..\..\..\SRelease"
-# PROP Intermediate_Dir "..\..\..\SRelease\backsql"
-# PROP Target_Dir ""
-RSC=rc.exe
-# ADD BASE RSC /l 0x419
-# ADD RSC /l 0x419
-# ADD BASE CPP /nologo /MT /W3 /GX /O2 /I "..\\" /I "..\..\..\include" /D "WIN32" /D "NDEBUG" /D "_WINDOWS" /YX /FD /c
-# ADD CPP /nologo /W3 /GX /O2 /I "..\\" /I "..\..\..\include" /D "WIN32" /D "NDEBUG" /D "_WINDOWS" /YX /FD /c
-BSC32=bscmake.exe
-# ADD BASE BSC32 /nologo
-# ADD BSC32 /nologo
-LIB32=link.exe -lib
-# ADD BASE LIB32 /nologo
-# ADD LIB32 /nologo
-
-!ENDIF 
-
-# Begin Target
-
-# Name "backsql - Win32 Release"
-# Name "backsql - Win32 Debug"
-# Name "backsql - Win32 Single Debug"
-# Name "backsql - Win32 Single Release"
-# Begin Source File
-
-SOURCE=".\back-sql.h"
-# End Source File
-# Begin Source File
-
-SOURCE=.\bind.c
-# End Source File
-# Begin Source File
-
-SOURCE=.\config.c
-# End Source File
-# Begin Source File
-
-SOURCE=".\entry-id.c"
-# End Source File
-# Begin Source File
-
-SOURCE=".\entry-id.h"
-# End Source File
-# Begin Source File
-
-SOURCE=.\external.h
-# End Source File
-# Begin Source File
-
-SOURCE=.\init.c
-# End Source File
-# Begin Source File
-
-SOURCE=.\modify.c
-# End Source File
-# Begin Source File
-
-SOURCE=.\other.c
-# End Source File
-# Begin Source File
-
-SOURCE=".\schema-map.c"
-# End Source File
-# Begin Source File
-
-SOURCE=".\schema-map.h"
-# End Source File
-# Begin Source File
-
-SOURCE=.\search.c
-# End Source File
-# Begin Source File
-
-SOURCE=".\sql-types.h"
-# End Source File
-# Begin Source File
-
-SOURCE=".\sql-wrap.c"
-# End Source File
-# Begin Source File
-
-SOURCE=".\sql-wrap.h"
-# End Source File
-# Begin Source File
-
-SOURCE=.\util.c
-# End Source File
-# Begin Source File
-
-SOURCE=.\util.h
-# End Source File
-# End Target
-# End Project
