@@ -448,6 +448,8 @@ done:
 		}
 	}
 
+	slap_sl_free( op->o_req_ndn.bv_val, op->o_tmpmemctx );
+
 	return rc;
 }
 
@@ -703,11 +705,12 @@ do_syncrep2(
 						for ( i = 0; syncUUIDs[i].bv_val; i++ ) {
 							struct berval *syncuuid_bv;
 							syncuuid_bv = ber_dupbv( NULL, &syncUUIDs[i] );
+							slap_sl_free( syncUUIDs[i].bv_val,op->o_tmpmemctx );
 							avl_insert( &si->si_presentlist,
 									(caddr_t) syncuuid_bv,
 									syncuuid_cmp, avl_dup_error );
 						}
-						ber_memfree_x( syncUUIDs, op->o_tmpmemctx );
+						slap_sl_free( syncUUIDs, op->o_tmpmemctx );
 						break;
 					default:
 #ifdef NEW_LOGGING
@@ -805,9 +808,6 @@ done:
 	slap_sync_cookie_free( &syncCookie, 0 );
 	slap_sync_cookie_free( &syncCookie_req, 0 );
 
-	avl_free( si->si_presentlist, avl_ber_bvfree );
-	si->si_presentlist = NULL;
-
 	if ( res ) ldap_msgfree( res );
 
 	if ( rc && si->si_ld ) {
@@ -832,6 +832,7 @@ do_syncrepl(
 	int dostop = 0;
 	ber_socket_t s;
 	int i, defer = 1;
+	Backend *be;
 
 #ifdef NEW_LOGGING
 	LDAP_LOG ( OPERATION, DETAIL1, "do_syncrepl\n", 0, 0, 0 );
@@ -867,7 +868,7 @@ do_syncrepl(
 	op.o_dn = si->si_updatedn;
 	op.o_ndn = si->si_updatedn;
 	op.o_managedsait = 1;
-	op.o_bd = si->si_be;
+	op.o_bd = be = si->si_be;
 
 	op.o_sync_state.ctxcsn = NULL;
 	op.o_sync_state.sid = -1;
@@ -894,8 +895,7 @@ do_syncrepl(
 			 */
 			if ( rc == LDAP_SUCCESS ) {
 				if ( first ) {
-					rc = connection_client_setup( s, do_syncrepl,
-						arg );
+					rc = connection_client_setup( s, do_syncrepl, arg );
 				} else {
 					connection_client_enable( s );
 				} 
@@ -943,6 +943,8 @@ do_syncrepl(
 
 		if ( !si->si_retrynum || si->si_retrynum[i] == -2 ) {
 			ldap_pvt_runqueue_remove( &syncrepl_rq, rtask );
+			LDAP_STAILQ_REMOVE( &be->be_syncinfo, si, syncinfo_s, si_next );
+			syncinfo_free( si );
 		} else if ( si->si_retrynum[i] >= -1 ) {
 			if ( si->si_retrynum[i] > 0 )
 				si->si_retrynum[i]--;
@@ -1383,10 +1385,11 @@ syncrepl_entry(
 done :
 
 	if ( syncUUID_strrep.bv_val ) {
-		ber_memfree_x( syncUUID_strrep.bv_val, op->o_tmpmemctx );
+		slap_sl_free( syncUUID_strrep.bv_val, op->o_tmpmemctx );
 	}
 	if ( si->si_syncUUID_ndn.bv_val ) {
-		ber_memfree_x( si->si_syncUUID_ndn.bv_val, op->o_tmpmemctx );
+		ch_free( si->si_syncUUID_ndn.bv_val );
+		si->si_syncUUID_ndn.bv_val = NULL;
 	}
 	return ret;
 }
@@ -1771,7 +1774,7 @@ syncrepl_updateCookie(
 
 	op->o_tag = LDAP_REQ_ADD;
 	rc = slap_mods_opattrs( op, modlist, modtail,
-							 &text,txtbuf, textlen );
+		 &text, txtbuf, textlen, 0 );
 
 	for ( ml = modlist; ml != NULL; ml = ml->sml_next ) {
 		ml->sml_op = LDAP_MOD_REPLACE;
@@ -1947,7 +1950,7 @@ dn_callback(
 				"dn_callback : consistency error - entryUUID is not unique\n", 0, 0, 0 );
 #endif
 		} else {
-			ber_dupbv_x( &si->si_syncUUID_ndn, &rs->sr_entry->e_nname, op->o_tmpmemctx );
+			ber_dupbv_x( &si->si_syncUUID_ndn, &rs->sr_entry->e_nname, NULL );
 		}
 	} else if ( rs->sr_type == REP_RESULT ) {
 		if ( rs->sr_err == LDAP_SIZELIMIT_EXCEEDED ) {
@@ -2141,4 +2144,99 @@ avl_ber_bvfree( void *bv )
 		ch_free ( ((struct berval *)bv)->bv_val );
 	}
 	ch_free ( (char *) bv );
+}
+
+void
+syncinfo_free( syncinfo_t *sie )
+{
+	if ( sie->si_provideruri ) {
+		ch_free( sie->si_provideruri );
+	}
+	if ( sie->si_provideruri_bv ) {
+		ber_bvarray_free( sie->si_provideruri_bv );
+	}
+	if ( sie->si_updatedn.bv_val ) {
+		ch_free( sie->si_updatedn.bv_val );
+	}
+	if ( sie->si_binddn ) {
+		ch_free( sie->si_binddn );
+	}
+	if ( sie->si_passwd ) {
+		ch_free( sie->si_passwd );
+	}
+	if ( sie->si_saslmech ) {
+		ch_free( sie->si_saslmech );
+	}
+	if ( sie->si_secprops ) {
+		ch_free( sie->si_secprops );
+	}
+	if ( sie->si_realm ) {
+		ch_free( sie->si_realm );
+	}
+	if ( sie->si_authcId ) {
+		ch_free( sie->si_authcId );
+	}
+	if ( sie->si_authzId ) {
+		ch_free( sie->si_authzId );
+	}
+	if ( sie->si_filterstr.bv_val ) {
+		ch_free( sie->si_filterstr.bv_val );
+	}
+	if ( sie->si_base.bv_val ) {
+		ch_free( sie->si_base.bv_val );
+	}
+	if ( sie->si_attrs ) {
+		int i = 0;
+		while ( sie->si_attrs[i] != NULL ) {
+			ch_free( sie->si_attrs[i] );
+			i++;
+		}
+		ch_free( sie->si_attrs );
+	}
+	if ( sie->si_exattrs ) {
+		int i = 0;
+		while ( sie->si_exattrs[i] != NULL ) {
+			ch_free( sie->si_exattrs[i] );
+			i++;
+		}
+		ch_free( sie->si_exattrs );
+	}
+	if ( sie->si_retryinterval ) {
+		ch_free( sie->si_retryinterval );
+	}
+	if ( sie->si_retrynum ) {
+		ch_free( sie->si_retrynum );
+	}
+	if ( sie->si_retrynum_init ) {
+		ch_free( sie->si_retrynum_init );
+	}
+	slap_sync_cookie_free( &sie->si_syncCookie, 0 );
+	if ( sie->si_syncUUID_ndn.bv_val ) {
+		ch_free( sie->si_syncUUID_ndn.bv_val );
+	}
+	if ( sie->si_presentlist ) {
+	    avl_free( sie->si_presentlist, avl_ber_bvfree );
+	}
+	if ( sie->si_ld ) {
+		ldap_ld_free( sie->si_ld, 1, NULL, NULL );
+	}
+	while ( !LDAP_LIST_EMPTY( &sie->si_nonpresentlist )) {
+		struct nonpresent_entry* npe;
+		npe = LDAP_LIST_FIRST( &sie->si_nonpresentlist );
+		LDAP_LIST_REMOVE( npe, npe_link );
+		if ( npe->npe_name ) {
+			if ( npe->npe_name->bv_val ) {
+				ch_free( npe->npe_name->bv_val );
+			}
+			ch_free( npe->npe_name );
+		}
+		if ( npe->npe_nname ) {
+			if ( npe->npe_nname->bv_val ) {
+				ch_free( npe->npe_nname->bv_val );
+			}
+			ch_free( npe->npe_nname );
+		}
+		ch_free( npe );
+	}
+	ch_free( sie );
 }
